   tone to Channel2 only.

 * The AMI 'Status' response event to the AMI Status action replaces the
   BridgedChannel and BridgedUniqueid headers with the BridgeID header to
   indicate what bridge the channel is currently in.

 * The AMI 'Hold' event has been moved out of individual channel drivers, into
   core, and is now two events: Hold and Unhold.  The status field has been
   removed.

Channel Drivers
------------------
 * When a channel driver is configured to enable jiterbuffers, they are now
   applied unconditionally when a channel joins a bridge. If a jitterbuffer
   is already set for that channel when it enters, such as by the JITTERBUFFER
   function, then the existing jitterbuffer will be used and the one set by
   the channel driver will not be applied.

chan_local
------------------
 * The /b option is removed.

 * chan_local moved into the system core and is no longer a loadable module.

chan_mobile
------------------
 * Added general support for busy detection.

 * Added ECAM command support for Sony Ericsson phones.

chan_sip
------------------
 * Added support for RFC 3327 "Path" headers. This can be enabled in sip.conf
   using the 'supportpath' setting, either on a global basis or on a peer basis.
   This setting enables Asterisk to route outgoing out-of-dialog requests via a
   set of proxies by using a pre-loaded route-set defined by the Path headers in
   the REGISTER request. See Realtime updates for more configuration information.

Features
-------------------
 * The BRIDGE_FEATURES channel variable would previously only set features for
   the calling party and would set this feature regardless of whether the
   feature was in caps or in lowercase. Use of a caps feature for a letter
   will now apply the feature to the calling party while use of a lowercase
   letter will apply that feature to the called party.

 * Add support for automixmonitor to the BRIDGE_FEATURES channel variable.
